<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_gender"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_login"
    tools:context=".ui.fragment.auth.signup.SignUpGenderFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_light"
        android:fadingEdge="horizontal"
        android:fontFamily="@font/balsamiq_sans_bold"
        android:paddingHorizontal="@dimen/separation_small"
        android:paddingBottom="@dimen/separation_extra_small"
        android:text="@string/What_gender"
        android:textColor="@color/dark"
        android:textSize="@dimen/text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_girl"
        android:layout_width="@dimen/btnProfile_size_medium"
        android:layout_height="@dimen/btnProfile_size_medium"
        android:src="@drawable/ic_photo_profile_girl_deselected"
        app:civ_border_color="@color/black_25"
        app:civ_border_width="@dimen/border_width_small"
        app:civ_circle_background_color="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_boy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/tv_girl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/separation_extra_small"
        android:fontFamily="@font/balsamiq_sans_regular"
        android:text="@string/girl"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_subTitle"
        app:layout_constraintEnd_toEndOf="@+id/iv_girl"
        app:layout_constraintStart_toStartOf="@+id/iv_girl"
        app:layout_constraintTop_toBottomOf="@+id/iv_girl" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_boy"
        android:layout_width="@dimen/btnProfile_size_medium"
        android:layout_height="@dimen/btnProfile_size_medium"
        android:src="@drawable/ic_photo_profile_boy_deselected"
        app:civ_border_color="@color/black_25"
        app:civ_border_width="@dimen/border_width_small"
        app:civ_circle_background_color="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_girl"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/tv_boy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/separation_extra_small"
        android:fontFamily="@font/balsamiq_sans_regular"
        android:text="@string/boy"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_subTitle"
        app:layout_constraintEnd_toEndOf="@+id/iv_boy"
        app:layout_constraintStart_toStartOf="@+id/iv_boy"
        app:layout_constraintTop_toBottomOf="@+id/iv_boy" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_backward"
        android:layout_width="@dimen/width_button_short"
        android:layout_height="@dimen/height_button_medium"
        android:layout_margin="@dimen/separation_small"
        android:background="@drawable/btn_previous_bubble"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_forward"
        android:layout_width="@dimen/width_button_short"
        android:layout_height="@dimen/height_button_medium"
        android:layout_margin="@dimen/separation_small"
        android:background="@drawable/btn_next_bubble"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>